# web-crawler

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: docker-publish-master.yml  worktree.yml
docs/: api-reference.md  deployment.md  development.md  project-vision.md
feeder/: Dockerfile  Dockerfile.dockerignore
feeder/src/: job.rs  main.rs
frontend/: package-lock.json  package.json
frontend/src/components/: GraphView.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: CrawlDetail.tsx  CrawlList.tsx  NewCrawl.tsx
frontend/src/types/: api.ts
manager/: Dockerfile  Dockerfile.dockerignore
manager/src/models/: crawl.rs
manager/src/routes/: crawl.rs
manager/src/services/: crawl_service.rs
shared/: Cargo.toml
shared/src/: crawler.rs  url_normalize.rs
web-crawler/: values.yaml
web-crawler/charts/feeder/: values.yaml
web-crawler/charts/frontend/: values.yaml
web-crawler/charts/manager/: values.yaml
web-crawler/templates/: NOTES.txt
