[package]
name = "shared"
version = "1.0.0"
edition = "2021"
description = "Shared library for web-crawler services"

[dependencies]
# default-features = false must be set per-crate; Cargo ignores it in [workspace.dependencies]
reqwest = { workspace = true, default-features = false }
hickory-resolver = { workspace = true }
neo4rs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
psl = "2"
scraper = "0.22"
url = "2"

[dev-dependencies]
tokio = { workspace = true }
